syntax = "proto3";
package outer;
option  go_package = "/outer";

message UseItemReq
{
    map<int64,int64> Items = 1;
}

message UseItemResp
{
}

message ItemChangeNotify
{
    map<int64,int64> Items = 1;
}
